--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,11 @@
     <style>
         body {
             color: white;
-            background-image: url(https://www.it-recht-web.de/wp-content/uploads/2018/10/filesharing-drei-fragezeichen-waldorf-frommer.jpg);
-            background-size: cover;
+            background-image: url(https://cdn.pixabay.com/photo/2017/07/10/23/43/question-mark-2492009_1280.jpg);
+        }
+        .btn-primary {
+            background-color: darkslategrey;
+            border: none;
         }
         .question-card {
             cursor: pointer;
@@ -39,6 +42,9 @@
         .team-header {
             display: flex;
             align-items: center;
+            justify-content: center; /* Center horizontally */
+            gap: 10px; /* Space between h2 and button */
+            margin-bottom: 20px; /* Space between header and cards */
         }
         .team-header h2 {
             margin: 0;
@@ -47,7 +53,8 @@
             display: flex;
             justify-content: center; /* Center horizontally */
             align-items: center; /* Center vertically */
-            margin-bottom: 20px; /* Adjust the margin from the bottom as needed */
+            flex-wrap: wrap;
+            gap: 20px; /* Space between team cards */
         }
         .team-card {
             position: relative;
@@ -135,8 +142,8 @@
             filter: none; /* Remove blur effect on hover */
         }
         .btn-icon {
-            width: 40px;
-            height: 40px;
+            width: 30px;
+            height: 30px;
             padding: 0;
             border-radius: 50%;
             border: none;
@@ -199,15 +206,15 @@
                             </div>
                         </div>
                         {% endfor %}
+                        <form id="teamForm" action="{{ url_for('add_team') }}" method="post" class="mt-4" style="display: none;">
+                            <div class="form-group">
+                                <label for="name">Team Name</label>
+                                <input type="text" class="form-control" id="name" name="name" maxlength="15">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Add Team</button>
+                        </form>
                     </div>
                 </div>
-                <form id="teamForm" action="{{ url_for('add_team') }}" method="post" class="mt-4" style="display: none;">
-                    <div class="form-group">
-                        <label for="name">Team Name</label>
-                        <input type="text" class="form-control" id="name" name="name" maxlength="15">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Add Team</button>
-                </form>
             </div>
         </div>
     </div>
@@ -225,13 +232,13 @@
             </div>
             <div class="modal-footer">
                 <div class="answer-button-container">
-                    <button type="button" class="btn btn-primary answer-button" onclick="submitAnswer(true)">Richtig</button>
+                    <button type="button" class="btn btn-secondary answer-button" onclick="submitAnswer(true)">Richtig</button>
                 </div>
                 <div class="answer-text-container">
                     <span id="answerText"></span>
                 </div>
                 <div class="answer-button-container">
-                    <button type="button" class="btn btn-primary answer-button" onclick="submitAnswer(false)">Falsch</button>
+                    <button type="button" class="btn btn-secondary answer-button" onclick="submitAnswer(false)">Falsch</button>
                 </div>
             </div>
         </div>
@@ -331,6 +338,14 @@
                 }
             }
         }
+
+        document.getElementById('teamForm').addEventListener('submit', function(event) {
+            var teamName = document.getElementById('name').value.trim();
+            if (teamName === '') {
+                alert('Team Name cannot be empty.');
+                event.preventDefault(); // Prevent the form from being submitted
+            }
+        });
     </script>
 </body>
 </html>
