--- a/templates/index.html
+++ b/templates/index.html
@@ -58,9 +58,12 @@
         }
         .team-card {
             position: relative;
-            height: 200px; /* Adjust the height as needed */
+            height: auto; /* Adjust the height as needed */
             width: 100%; /* Use full width within the grid column */
             margin-bottom: 10px; /* Space between team cards */
+        }
+        .team-card:not(.active) {
+            display: none;
         }
         .team-card-body {
             display: flex;
@@ -204,21 +207,21 @@
                 <div class="team-cards-wrapper">
                     <div class="team-header">
                         <h2>Teams</h2>
-                        <button class="btn btn-primary btn-icon" onclick="toggleTeamForm()">
+                        <button class="btn btn-primary btn-icon" onclick="toggleTeamSettings()">
                             <i class="fas fa-pencil-alt"></i>
                         </button>
                     </div>
                     <div class="row team-cards-container">
                         {% for team in teams %}
-                        <div class="col-md-3 mb-3">
-                            <div class="card team-card" data-team-id="{{ team.team_id }}">
+                        <div>
+                            <div class="card team-card {{ 'active' if team.is_active }}" data-team-id="{{ team.team_id }}">
                                 <button class="btn btn-sm btn-danger remove-team-btn" onclick="removeTeam({{ team.team_id }})"><span aria-hidden="true">&times;</span></button>
                                 <div class="card-body team-card-body">
-                                    <div>
+                                    <div class="mx-3">
                                         <h5 class="card-title">{{ team.name }}</h5>
                                         <span class="card-text">{{ team.score }}</span>
                                     </div>
-                                    <div class="team-add-points mt-2">
+                                    <div class="team-add-points mt-2 mx-3">
                                         <input type="number" class="mb-2 team-add-points-input" id="points-{{ team.team_id }}">
                                         <div class="button-group">
                                             <button class="btn btn-success btn-sm team-control-btn" onclick="updateScore({{ team.team_id }}, 'add')">+</button>
@@ -229,17 +232,17 @@
                                 <div class="team-card-settings">
                                     <div class="team-buzzer-id">
                                         <label class="" for="buzzer-id-{{ team.team_id }}">Buzzer ID</label>
-                                        <input type="number" class="mb-2 team-buzzer-id-input" id="buzzer-id-{{ team.team_id }}" name="buzzer_id" min="1" max="4" value="{{ team.buzzer_id }}">
+                                        <input type="number" class="mb-2 team-buzzer-id-input" id="buzzer-id-{{ team.team_id }}" name="buzzer_id" onchange="updateBuzzerID({{ team.team_id }}, this.value)" value="{{ team.buzzer_id if team.buzzer_id }}">
                                     </div>
                                     <div class="team-active">
-                                        <input type="checkbox" id="active-{{ team.team_id }}" name="active">
+                                        <input type="checkbox" id="active-{{ team.team_id }}" name="active" onchange="toggleTeamActivation({{ team.team_id }}, this.checked)" {{ 'checked' if team.is_active }}>
                                         <label for="active-{{ team.team_id }}">Active</label>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         {% endfor %}
-                        <form id="teamForm" action="{{ url_for('add_team') }}" method="post" class="mt-4" style="display: none;">
+                        <form id="add-teams-form" action="{{ url_for('add_team') }}" method="post" class="mt-4" style="display: none;">
                             <div class="form-group">
                                 <label for="name">Team Name</label>
                                 <input type="text" class="form-control" id="name" name="name" maxlength="15">
@@ -281,8 +284,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
+        var teamSettingsVisible = false;
         var currentQuestionId;
-        var currentTeamId;
 
         function selectQuestion(questionId) {
             currentQuestionId = questionId;
@@ -355,31 +358,58 @@
             }
         }
 
-        function toggleTeamForm() {
-            var form = document.getElementById('teamForm');
-            var removeButtons = document.getElementsByClassName('remove-team-btn');
-            var teamSettings = document.getElementsByClassName('team-card-settings');
+        function toggleTeamActivation(teamId, isChecked) {
+            $.post("/toggle_team_activation", { team_id: teamId, active: isChecked }, function(response) {
+                var teamCard = $('.team-card[data-team-id="' + teamId + '"]');
+                if (isChecked) {
+                    teamCard.addClass('active');
+                } else {
+                    teamCard.removeClass('active');
+                }
+            });
+        }
 
-            if (form.style.display === 'none' || form.style.display === '') {
-                form.style.display = 'block';
-                for (var i = 0; i < removeButtons.length; i++) {
-                    removeButtons[i].style.display = 'block';
+        function updateBuzzerID(teamId, buzzerId) {
+            $.post("/update_buzzer_id", { team_id: teamId, buzzer_id: buzzerId }, function(response) {
+                if (response.success) {
+                    $("#buzzer-id-" + teamId).css({
+                        "background-color": "",
+                        "border-color": ""
+                    });
+                } else {
+                    alert(response.message);
+                    $("#buzzer-id-" + teamId).css({
+                        "background-color": "red",
+                        "border-color": "red"
+                    });
                 }
-                for (var i = 0; i < teamSettings.length; i++) {
-                    teamSettings[i].style.display = 'block';
-                }
+            });
+        }
+
+        function toggleTeamSettings() {
+            var addTeamsForm = $('#add-teams-form');
+            var teamCards = $('.team-card');
+            var teamCardSettings = $(teamCards).find('.team-card-settings');
+            var removeTeamButtons = $(teamCards).find('.remove-team-btn');
+            var activeTeamCards = $('.team-card.active');
+            var nonActiveTeamCards = $('.team-card:not(.active)');
+
+            if (teamSettingsVisible == false) {
+                teamSettingsVisible = true;
+                addTeamsForm.css('display', 'block');
+                removeTeamButtons.css('display', 'block');
+                teamCardSettings.css('display', 'block');
+                teamCards.css('display', 'block');
             } else {
-                form.style.display = 'none';
-                for (var i = 0; i < removeButtons.length; i++) {
-                    removeButtons[i].style.display = 'none';
-                }
-                for (var i = 0; i < teamSettings.length; i++) {
-                    teamSettings[i].style.display = 'none';
-                }
+                teamSettingsVisible = false;
+                addTeamsForm.css('display', 'none');
+                removeTeamButtons.css('display', 'none');
+                teamCardSettings.css('display', 'none');
+                nonActiveTeamCards.css('display', 'none');
             }
         }
 
-        document.getElementById('teamForm').addEventListener('submit', function(event) {
+        document.getElementById('add-teams-form').addEventListener('submit', function(event) {
             var teamName = document.getElementById('name').value.trim();
             if (teamName === '') {
                 alert('Team Name cannot be empty.');
